adding authors info

--- a/public/static/locales/pt/common.json
+++ b/public/static/locales/pt/common.json
@@ -16,7 +16,7 @@
         "altImage": "Logo - Quatro Linhas",
         "meta": {
             "title": "Quatro Linhas",
-            "description": "-",
+            "description": "Quatro linhas, quatro Campinas.",
             "keywords": "Campinas, Resenha, Quatro, Linhas, Amigos"
         }
     },
